--- a/gaming/index.html
+++ b/gaming/index.html
@@ -14,8 +14,8 @@
 
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="L.O.T GAMING">
-<meta name="keywords" content="csgo,csgoserver,lot,lotgaming,lotserver,lotindia,indianserver" />
+<meta name="description" content="XymenGaming">
+<meta name="keywords" content="csgo,csgoserver,xymen,xymengaming,xymenserver,xymenindia,indianserver" />
 <meta name="author" content="lotcsgo">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -288,7 +288,7 @@ function myFunction() {
 
 <hr class="hr-width-1 hr-5x border-main">
 
-<p class="heading-tescription lead text-gray-2">How to Connect ??? You Can Open up the Console in game and type <font color="red">connect 35.154.30.22:27015</font></p>
+<p class="heading-tescription lead text-gray-2">How to Connect ??? You Can Open up the Console in game and type <font color="red">connect pug.xymenapps.com:27015</font></p>
 <p class="heading-tescription lead text-gray-2"><font color="green">Join Our Discord Community</font></p>
 <iframe src="https://discordapp.com/widget?id=614355870163140608&theme=dark" width="300" height="420" allowtransparency="true" frameborder="0"></iframe>
 
@@ -301,14 +301,14 @@ function myFunction() {
 
             <div class="info-box info-box-4 info-box-white wow fadeIn">
             <div class="info-box-info">
-                <h2 class="info-box-title">AWP CASUAL<font color="green"> [connect awp.xymenapps.com]</font></h2>
+                <h2 class="info-box-title">PUG Server<font color="green"> [connect pug.xymenapps.com:27015]</font></h2>
 </div>
 </div>
 
 
 <div class="info-box info-box-4 info-box-white wow fadeIn" data-wow-delay="0.2s">
 <div class="info-box-info">
-<h2 class="info-box-title">PUG Server<font color="green"> [Coming Soon]</font></h2>
+<h2 class="info-box-title">AWP CASUAL<font color="green"> [Coming Soon]</font></h2>
 </div>
 </div>
 
@@ -411,10 +411,10 @@ function myFunction() {
 <div class="container">
 
 <div class="owl-carousel prices-carousel dots-outside nav-outside-top" data-items="4" data-margin="15" data-nav="true" data-tablet-landscape="3" data-tablet-portrait="3" data-mobile-landscape="2" data-mobile-portrait="1">
-  <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.30.22:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
-  <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.30.22:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
-  <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.30.22:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
-  <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.30.22:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
+  <iframe src="https://cache.gametracker.com/components/html0/?host=pug.xymenapps.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
+  <iframe src="https://cache.gametracker.com/components/html0/?host=pug.xymenapps.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
+  <iframe src="https://cache.gametracker.com/components/html0/?host=pug.xymenapps.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
+  <iframe src="https://cache.gametracker.com/components/html0/?host=pug.xymenapps.com:27015&bgColor=333333&fontColor=cccccc&titleBgColor=222222&titleColor=ff9900&borderColor=555555&linkColor=ffcc00&borderLinkColor=222222&showMap=1&currentPlayersHeight=100&showCurrPlayers=1&topPlayersHeight=100&showTopPlayers=1&showBlogs=0&width=240" frameborder="0" scrolling="no" width="240" height="536"></iframe>
 <!-- <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.30.22&bgColor=000000&fontColor=CCCCCC&titleBgColor=000000&titleColor=FF9900&borderColor=FFFFFF&linkColor=FFCC00&borderLinkColor=222222&showMap=0&currentPlayersHeight=100&showCurrPlayers=1&showTopPlayers=0&showBlogs=0&width=250" frameborder="0" scrolling="no" width="250" height="288"></iframe> -->
 <!-- <iframe src="https://cache.gametracker.com/components/html0/?host=13.232.157.10:27015&bgColor=000000&fontColor=CCCCCC&titleBgColor=000000&titleColor=FF9900&borderColor=FFFFFF&linkColor=FFCC00&borderLinkColor=222222&showMap=0&currentPlayersHeight=100&showCurrPlayers=1&showTopPlayers=0&showBlogs=0&width=250" frameborder="0" scrolling="no" width="250" height="288"></iframe> -->
 <!-- <iframe src="https://cache.gametracker.com/components/html0/?host=13.234.138.91:27015&bgColor=000000&fontColor=CCCCCC&titleBgColor=000000&titleColor=FF9900&borderColor=FFFFFF&linkColor=FFCC00&borderLinkColor=222222&showMap=0&currentPlayersHeight=100&showCurrPlayers=1&showTopPlayers=0&showBlogs=0&width=250" frameborder="0" scrolling="no" width="250" height="288"></iframe><iframe <iframe src="https://cache.gametracker.com/components/html0/?host=35.154.45.59:27016&bgColor=000000&fontColor=CCCCCC&titleBgColor=000000&titleColor=FF9900&borderColor=FFFFFF&linkColor=FFCC00&borderLinkColor=222222&showMap=0&currentPlayersHeight=100&showCurrPlayers=1&showTopPlayers=0&showBlogs=0&width=250" frameborder="0" scrolling="no" width="250" height="288"></iframe> -->
@@ -450,7 +450,7 @@ function myFunction() {
 <div class="contact-info">
 
 <p><i class="fa fa-"></i></p>
-<p><i class="fa fa-envelope"></i> <a href="mailto:xymenapp@gmail.com" target="_blank">xymenapp@gmail.com</a></p>
+<p><i class="fa fa-envelope"></i> <a href="mailto:xymenapps.official@gmail.com" target="_blank">xymenapps.official@gmail.com</a></p>
 <p><i class="fa fa-steam"></i> <a href="https://steamcommunity.com/id/whitecrow474226/" target="_blank">-=WhiteCrow=-</a></p>
 </div>
 <h5 class="margin-top-40 margin-bottom-20">Join XymenGaming!!</h5>
