--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   								<li class="nav-item"><a class="nav-link" href="#video">VIDEO</a>
   								<li class="nav-item"><a class="nav-link" href="#price">PRICING</a>
   								<li class="nav-item"><a class="nav-link" href="#screen">SCREENSHOTS</a>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">BLOG</a>
+                    <li class="nav-item"><a class="nav-link" href="http://blog.xymenapps.com" target="_blank">BLOG</a>
   								<!--<li class="nav-item submenu dropdown">
   									<a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Pages</a>
   									<ul class="dropdown-menu">
