--- a/gaming/index.html
+++ b/gaming/index.html
@@ -157,7 +157,7 @@ body {
 </head>
 <body>
 <video autoplay muted loop id="myVideo">
-<source src="csgo/newbg.mp4" type="video/mp4">
+<source src="https://github.com/Ishaan-Kumar/www-xymenapps-com/blob/master/gaming/csgo/newbg.mp4?raw=true" type="video/mp4">
 Your browser does not support HTML5 video.
 </video>
 <div class="content">
